--- a/app/src/main/res/layout/spinner_item_layout.xml
+++ b/app/src/main/res/layout/spinner_item_layout.xml
@@ -6,4 +6,5 @@
     android:textSize="24sp"
     android:padding="10sp"
     android:textColor="@color/white"
+    android:background="@color/purple"
     xmlns:android="http://schemas.android.com/apk/res/android"  />
